Added all new copy and images to the stairs-death.html file and linked between sites and added attribution

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     <img src="img/mozzarella-vehicles.png" alt="Low to no correlation bewteen these two items">
     <p>Drivers of special agricultural vehicles need not worry about consuming mozzarella cheese while driving cows from field to field</p>
     <h2>Overall conclusion: Mozzarella Cheese is Awesome!!</h2>
+    <h4>Interested in some other intersting correlations, <a href="stairs-death.html">visit this page</a></h4>
+    <h5>all images and facts pulled from: <a href="http://tylervigen.com/spurious-correlations" target="_blank">TylerVigen.com</a></h5>
   </body>
 </html>
