--- a/stairs-death.html
+++ b/stairs-death.html
@@ -5,6 +5,20 @@
 </head>
   <body>
     <h1>Correlations between Death by falling down stairs and various other things</h1>
-    <h3></h3>
+    <h3>Correlation between Death by falling down stairs and visiting Disney Animal Kingdom</h3>
+    <img src="img/stairs-disney.png" alt="strong correlation between the two">
+    <p>There is a very strong correlation between these two items</p>
+    <h3>Correlation between honey and death by falling down the stairs</h3>
+    <img src="img/stairs-honey.png" alt="strong negative correlation between the two">
+    <p>There is a strong negative correlation between these two items</p>
+    <h3>Correlation between the cost of Red Delicious apples and death by falling down the stairs</h3>
+    <img src="img/stairs-apples.png" alt="Strong correlation">
+    <p>This correlation is strong</p>
+    <h3>Correlation between death by catacylsmic storm and death by falling down the stairs</h3>
+    <img src="img/stairs-storm.png" alt="There is no correlation">
+    <p>There is no correlation here</p>
+    <h2>Conclusion: Greedy Apple Farmers Are Killing the Bees!!</h2>
+    <h4>Interested in some other intersting correlations, <a href="index.html">visit this page</a></h4>
+    <h5>all images and facts pulled from: <a href="http://tylervigen.com/spurious-correlations" target="_blank">TylerVigen.com</a></h5>
   </body>
 </html>
